@@ -1,6 +1,4 @@
 AUX docs_gen.patch 656 RMD160 fc7a67d7beffa50bd2b38609fce7b24b67f53c63 SHA1 a60d8d9c12ec741175f53519f54613ce13812f12 SHA256 d11b76c45a754b96bff947d1e56d2ca7b470deb4e6d3db5316de59d11207de8d
-DIST qt-creator-1.2.90-src.tar.gz 8033688 RMD160 f05c221588a846f36a0d4c6d96accca7fe97bab8 SHA1 4389e678a292623d0e5fd21f928ea77e49e87869 SHA256 cdbb18627f8c5dcfe56651f56bc5985c1e3f867c38baccc52efcc2cdef2eec6d
-EBUILD qt-creator-1.2.90.ebuild 2797 RMD160 ce24fad0000ad9a4c7a04e4db0000dd7c6d09f86 SHA1 8e1a1f8d1161d8f0c2b0775bac37c82381277482 SHA256 0d75ad888120263a78f8bdd8e70ce26f65f8d85c73ed8a4146bcc375c2bbeabd
 EBUILD qt-creator-9999.ebuild 2870 RMD160 e2e475a704be1e85c25cf60bc5afc7850ff2ef88 SHA1 8b42a0179f606f5182c1f7e7d85f2193183172ed SHA256 04cd933d20eb2d5bac774de610fe69c222aa9e341ed09b42c46143b39e8fcadc
-MISC ChangeLog 8152 RMD160 b674e9eb3e29568d38f23399ff6e0382d0642d0c SHA1 8a16687b6736ea0bc41f9e4640ffeeec7d263276 SHA256 608621b1d33c3840b492c8716d988e55ea40d7e676a96ed57f0e24c7faf3f336
+MISC ChangeLog 8245 RMD160 d186d0cf3dd6230b7b00e8f85675389b1ca0bb0b SHA1 abd5e505eb02fbb4fff80e8eb5ceeaebaf94f01d SHA256 90a74f397c7ea07ff51aa7e9d9bf5e61cfa99ac08e9adce4fbe6f23db36b62d6
 MISC metadata.xml 895 RMD160 8801ac01fc39baecabe094b64ba41a6a5c7c597f SHA1 e7b045c7ba1bec8eced17bbe88fc25eae5777bbe SHA256 4d5ebb9d910fb447d8082a845269c1cfca0f3891b7acfe50a7f27e124501eddb
